lab3/examples/useStrict.js
"use strict";
alert("some code");
a = 3 // error: variable a is not defined